(fix): fix overflow in home page

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+
+
+html, body {
+  overflow-x: hidden;
+}
+
 /* @layer base {
   body {
     font-family: 'DM Sans', sans-serif;
